  Now eof_of_tape is set properly after every change of either
  CASSETTE_current_block or CASSETTE_max_block, so a dangerous call to
  CASSETTE_IOLineStatus doesn't happen anymore.

* cartridge.c: Fixed a bug introduced in rev. 1.48: CARTRIDGE_StateRead would
  try to read the cartridge's bank state even if the cartridge was not
  present; thus the whole state reading would fail.


2011-06-21  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* ui.c: Fixed a segfault when opening the "Fullscreen resolution" submenu.
  This was caused by the change in ui.h on 06-20. (reported by Krzysztof
  Karkosza)


2011-06-20  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sdl/input.c: Fixed a bug with F10 creating interlaced screenshots instead of
  non-interlaced.

* cartridge.[ch], ui.c, atari800.man, DOC/USAGE: Ported from Atari800WinPLus -
  an option for enabling/disabling automatic reboot when the cartridge is
  inserted or removed. (Only applies to the main cartridge. After inserting or
  removing a piggyback cartridge, it works as earlier - ie. the system will
  not reboot automatically.)
  
* ui.h, ui_basic.c: Reworked detection of menu end (UI_MENU_END). The
  previous solution stopped working correctly since in the CartManagement menu
  there are hidden menuitems with the "item" field set to NULL which would be
  incorrectly detected as end of menu.


2011-06-17  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.c, DOC/cart.txt: Reverted the last change in the 034M mapping
  regarding switched banks 1 and 2 - on second thought, applying such change
  to a years-old specification without proper discussion is not a good idea.


2011-06-16  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
*cartridge.c, DOC/cart.txt: Fixed an ages-old bug in the OSS 034M cartridge
  banking scheme. Banks 1 and 2 were switched, which caused all known OSS
  034M dumps to fail. (There actually are only 3 known images of 034M
  cartridges: